Created responsive frontend for event list and began wireframing for event form.

--- a/html/menu/menu.html
+++ b/html/menu/menu.html
@@ -12,14 +12,17 @@
 
 
     <!------- CSS ------->
-    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../../css/fonts.css">
+
+    <link rel="stylesheet" href="../../css/nav.css">
+    <link rel="stylesheet" href="../../css/landing.css">
 
     <!------- Fonts ------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>New Leaf Catfe :: Menu</title>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg">
@@ -38,7 +41,6 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- <div class="container"> -->
         <div id="nav-shine">
             <div class="hover-shape hover-sm"></div>
             <div class="hover-shape hover-lg"></div>
@@ -50,18 +52,23 @@
             
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">
+                    <a href="../home/index.html" class="nav-link active">
                         Home
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        Link
+                        Cats
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="../menu/menu.html" class="nav-link">
+                        Menu
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        Link
+                        Events
                     </a>
                 </li>
             </ul>
@@ -69,34 +76,34 @@
             <a href="#" class="navbar-brand d-none d-lg-block" id="custom-logo-positioning">
                 <img 
                     class="d-inline-block align-top"
-                    src="../imgs/logo/svg/new-leaf-logo.svg" alt="" />
+                    src="../../imgs/logo/svg/new-leaf-logo.svg" alt="" />
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        Link
+                        Schedule
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        Link
+                        About
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        Link
-                    </a>
-                </li>
+
+
                 <li class="nav-item login-container">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
+                        <li class="nav-item" id= "login-btn">
+                            <a href="#" class="nav-link" id="login-link">
                                 Login
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                Link
+                            <div class="login-divider"></div>       
+                       </li>
+                        <li class="nav-item" id="sign-up-btn">
+                            <a href="#" class="nav-link" id="sign-up-link">
+                                Sign Up
                             </a>
                         </li>
                     </ul>
@@ -104,38 +111,9 @@
                 
             </ul>
         </div>
-     <!-- </div> -->
-</nav>
+    </nav>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- END NAV -->
 </body>
 </html>
